--- a/src/www/public/connect/connect.css
+++ b/src/www/public/connect/connect.css
@@ -1,9 +1,10 @@
-.requirements-wrapper { margin-bottom: 2rem }
-.requirements-container { width: 40%; max-width: 30rem; margin-right: 1rem }
-.requirements-container:last-of-type { margin-right: 0 }
+
+.two-columns { display: grid; grid-template-columns: 1fr 1fr; grid-gap: 2rem }
+
 .requirements { border: 1px solid #CCC; padding: 1rem; margin-right: 1rem }
-.requirements:last-of-type { margin-right: 0 }
-form.pure-form { max-width: 40rem }
+.numbered-list { list-style-type: decimal; margin-bottom: 2rem; padding-left: 2rem }
+.numbered-list-item { line-height: 1.5rem; list-style-type: decimal }
+
 form.connect-form input[type="text"] { width: auto }
 form.connect-form input[type="file"] { margin-bottom: 0.5rem }
 form.connect-form input.full-width { width: 100%; max-width: 100% }
@@ -14,9 +15,9 @@ form.connect-form select { width: 100%; margin-right: 1rem; max-width: 100% !imp
 form.connect-form h1,
 form.connect-form h2,
 form.connect-form label,
-form.connect-form .pure-controls,
-form.connect-form .pure-control-group { text-align: left }
-form.connect-form .pure-controls { margin-top: 1rem }
+form.connect-form .button-group,
+form.connect-form .input-fields { text-align: left }
+form.connect-form .button-group { margin-top: 1rem }
 form.connect-form .error.message { color: #FFF; background-color: #900; border: 2px solid #F00; padding: 0.25rem; text-align: left; border-radius: 0.2rem; }
 form.hidden-form { display: none }
 @media (max-width: 960px) {
