--- a/src/www/public/connect/connect.css
+++ b/src/www/public/connect/connect.css
@@ -1,7 +1,7 @@
 
 .two-columns { display: grid; grid-template-columns: 1fr 1fr; grid-gap: 2rem }
 
-.requirements { border: 1px solid #CCC; padding: 1rem; margin-right: 1rem }
+.requirements { border: 1px solid var(--requirements-border-color); padding: 1rem; margin-right: 1rem }
 .numbered-list { list-style-type: decimal; margin-bottom: 2rem; padding-left: 2rem }
 .numbered-list-item { line-height: 1.5rem; list-style-type: decimal }
 
@@ -9,8 +9,7 @@ form.connect-form input[type="text"] { width: auto }
 form.connect-form input[type="file"] { margin-bottom: 0.5rem }
 form.connect-form input.full-width { width: 100%; max-width: 100% }
 form.connect-form input.adjacent { display: inline-block !important; margin-right: 0.5rem !important }
-form.connect-form h2 { color: rgba(255, 255, 255, 0.6); font-size: 1rem }
-form.connect-form input[type="file"] { margin-top: 0.5rem; color: rgba(255, 255, 255, 0.5) }
+form.connect-form input[type="file"] { margin-top: 0.5rem }
 form.connect-form select { width: 100%; margin-right: 1rem; max-width: 100% !important }
 form.connect-form h1,
 form.connect-form h2,
@@ -18,9 +17,18 @@ form.connect-form label,
 form.connect-form .button-group,
 form.connect-form .input-fields { text-align: left }
 form.connect-form .button-group { margin-top: 1rem }
-form.connect-form .error.message { color: #FFF; background-color: #900; border: 2px solid #F00; padding: 0.25rem; text-align: left; border-radius: 0.2rem; }
-form.hidden-form { display: none }
+
 @media (max-width: 960px) {
   .requirements-container { width: 100%; margin-bottom: 2rem; margin-right: 0 }
-  .pure-u-2-24 { width: 0.5rem }
+}
+
+/* color settings */
+:root {
+  --requirements-border-color: rgba(0, 0, 0, 0.25);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --requirements-border-color: rgba(255, 255, 255, 0.25);
+  }
 }
